--- a/memory-card/src/styles/index.css
+++ b/memory-card/src/styles/index.css
@@ -1,10 +1,14 @@
+:root {
+  --gapSize: 20px;
+}
+
 body {
   margin: 0;
 }
 
 #app {
   display: grid;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: min-content 1fr;
   min-height: 100vh;
 }
 
@@ -14,10 +18,42 @@ body {
 
 #header {
   background-color: pink;
+  box-shadow: 0 0 10px black;
+  z-index: 1;
+}
+
+#header>h1 {
+  font-size: 4vw;
+}
+
+#header>p {
+  font-size: 2vw;
 }
 
 #cardContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
+  grid-auto-rows: 20vw;
+  gap: var(--gapSize);
   background-color: burlywood;
+  padding-top: var(--gapSize);
+}
+
+.card {
+  display: grid;
+  grid-auto-rows: min-content;
+  justify-items: center;
+  align-content: center;
+}
+
+.card>img {
+  width: 10vw;
+  height: 10vw;
+  background-color: white;
+}
+
+.card>h2 {
+  font-size: 3vw;
+  text-align: center;
+  color: white;
 }
