--- a/memory-card/src/styles/index.css
+++ b/memory-card/src/styles/index.css
@@ -1,5 +1,7 @@
 :root {
   --gapSize: 20px;
+  --headerColor: #F4DFBA;
+  --containerColor: #CA965C;
 }
 
 body {
@@ -17,17 +19,31 @@ body {
 }
 
 #header {
-  background-color: pink;
+  background-color: var(--headerColor);
   box-shadow: 0 0 10px black;
   z-index: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  white-space: nowrap;
 }
 
-#header>h1 {
+#header>div>h1 {
   font-size: 4vw;
 }
 
-#header>p {
+#header>div>p {
   font-size: 2vw;
+}
+
+#headerWrapper2 {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  justify-content: center;
+  align-content: flex-end;
+}
+
+#headerWrapper2>p {
+  margin-top: 0;
 }
 
 #cardContainer {
@@ -35,8 +51,8 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
   grid-auto-rows: 20vw;
   gap: var(--gapSize);
-  background-color: burlywood;
-  padding-top: var(--gapSize);
+  background-color: var(--containerColor);
+  padding: var(--gapSize) var(--gapSize) 0 var(--gapSize);
 }
 
 .card {
@@ -44,16 +60,28 @@ body {
   grid-auto-rows: min-content;
   justify-items: center;
   align-content: center;
+  box-shadow: 0 0 10px black;
+}
+
+.card:hover {
+  opacity: 0.5;
 }
 
 .card>img {
   width: 10vw;
   height: 10vw;
-  background-color: white;
 }
 
 .card>h2 {
   font-size: 3vw;
   text-align: center;
   color: white;
+}
+
+.selectDisable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
